# agentic-collaboration-standard

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  compatibility_report.md  feature_request.md
.github/workflows/: publish-npm.yml  publish-pypi.yml  publish-vsce.yml  validate-dotagents.yml  validate.yml
cli/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
cli/src/: index.ts
community/: ADOPTERS.md  ROADMAP.md
compatibility/: README.md  from-AGENTS.md.md  from-CLAUDE.md.md  from-SKILL.md.md  with-MCP.md
docs/: README.md  aaif-proposal-draft.md  conformance-checklist.md  faq.md  for-non-devs.md  for-tool-builders.md  getting-started.md  index.html  interop-dotagents.md  social-preview.html  why-acs.md
docs/announcements/: relicense-announcement.md
docs/guides/: conformance-checklist.md  faq.md  for-non-devs.md  for-tool-builders.md  getting-started.md  migration-guide.md  privacy-memories.md  why-acs.md
docs/legal/: licensing.md
docs/pr/: relicense-pr.md
docs/proposals/: aaif-proposal-draft.md  interop-dotagents.md
editor/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
examples/: README.md
reference-impl/: README.md
reference-impl/python/: acs_parser.py  acs_validator.py  pyproject.toml
schemas/: README.md
scripts/: validate_dotagents.py
site/: README.md  package-lock.json  package.json
website/: CNAME  _config.yml  icon-source.html  index.html  og-image.html
(+73 files in other folders)
